athena-eks-nonprod-sites/vb-eks/aggregateservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregateservice
  labels:
    svc: aggregateservice
spec:
  selector:
    app: aggregateservice
  ports:
  - protocol: TCP
    port: 8085
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregateservice
  labels:
    name: aggregateservice
    scheduling: vn
  annotations:
    prometheus.io/path: "/actuator/prometheus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregateservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: aggregateservice
        app: aggregateservice
    spec:
      nodeSelector: 
        nodeType: scheduling-vn
      tolerations:
      - effect: NoSchedule
        operator: Equal
        key: scheduling
        value: vn
      containers:
      - image: 696952606624.dkr.ecr.us-east-2.amazonaws.com/athena/aggregateservice:1.46.3
        name: aggregateservice
        command: ["/bin/sh", "-c"]
        args:
          - >-
            [...]
        ports:
        - containerPort: 8085
        volumeMounts:
        - mountPath: /home/athena/athena.env
          name: athenaenv
          subPath: athena.env
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /health
            port: 8085
            scheme: HTTP
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8085
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 60
        lifecycle: # Needed for no-downtime deployments
            preStop:
              exec:
                command: ["/bin/sleep", "5"]
        imagePullPolicy: Always
      volumes:
        - name: athenaenv
          configMap:
            defaultMode: 420
            name: release
      restartPolicy: Always
