athena-eks-nonprod-sites/vb-eks/importingservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: importingservice
  labels:
    svc: importingservice
spec:
  selector:
    app: importingservice
  ports:
  - protocol: TCP
    port: 8097
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: importingservice
  labels:
    name: importingservice
    scheduling: vn
  annotations:
    prometheus.io/path: "/actuator/prometheus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: importingservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: importingservice
        app: importingservice
    spec:
      nodeSelector:
        nodeType: scheduling-vn
      tolerations:
      - effect: NoSchedule
        operator: Equal
        key: scheduling
        value: vn
      containers:
      - image: 696952606624.dkr.ecr.us-east-2.amazonaws.com/athena/importservice:1.46.3
        name: importingservice
        command: ["/bin/sh", "-c"]
        args: 
          - >
            . /home/athena/athena.env && java 
            -Dcom.sun.management.jmxremote.port=6001
            -Dspring.profiles.active=eks 
            -Dcom.sun.management.jmxremote=true
            -Dcom.sun.management.jmxremote.authenticate=false
            -Dcom.sun.management.jmxremote.ssl=false
            -Dcom.sun.management.jmxremote.rmi.port=6001 
            -jar -XX:+UseG1GC -Xms256m -Xmx768m /home/athena/app.jar
            --spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/Athena
            --karros.athenagateway=${KARROS_GATEWAY}
            --karros.keycloak.clientid=${KEYCLOAK_BACKEND_ID}
            --karros.keycloak.clientsecret=${KEYCLOAK_SECRET}
            --karros.keycloak.url=https://${KEYCLOAK_DOMAIN}/auth/realms/Edulog/protocol/openid-connect/token
            --karros.keycloak.logouturl=https://${KEYCLOAK_DOMAIN}/auth/realms/Edulog/protocol/openid-connect/logout
            --karros.keycloak.forgotpasswordurl=https://${KEYCLOAK_DOMAIN}/auth/realms/Edulog/karros-auth/forgot-password
            --athena.tenant.id=${TENANT_ID}
            --spring.data.mongodb.host=${CACHE_HOST}
        ports:
        - containerPort: 8097
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /home/athena/athena.env
          name: athenaenv
          subPath: athena.env
        imagePullPolicy: Always
      volumes:
        - name: athenaenv
          configMap:
            defaultMode: 420
            name: release
      restartPolicy: Always
