athena-eks-nonprod-sites/vb-eks/routingservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: routingservice
  labels:
    svc: routingservice
spec:
  selector:
    app: routingservice
  ports:
  - protocol: TCP
    port: 8081
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: routing-nodeport
  labels:
    svc: routing-nodeport
spec:
  type: NodePort
  ports:
  - port: 8081
    nodePort: 31001
    name: http
  selector:
    app: routingservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routingservice
  labels:
    name: routingservice
    scheduling: vn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routingservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: routingservice
        app: routingservice
    spec:
      nodeSelector:
        nodeType: scheduling-vn
      tolerations:
      - effect: NoSchedule
        operator: Equal
        key: scheduling
        value: vn
      containers:
      - image: 696952606624.dkr.ecr.us-east-2.amazonaws.com/athena/routingservice:1.46.3
        name: routingservice
        command: ["/bin/sh", "-c"]
        args: 
        - >
          [...]
        ports:
        - containerPort:  8081
          name: routingservice
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 3Gi        
        volumeMounts:
        - mountPath: /home/athena/athena.env
          name: athenaenv
          subPath: athena.env
        imagePullPolicy: Always
      volumes:
        - name: athenaenv
          configMap:
            defaultMode: 420
            name: release
      restartPolicy: Always
