athena-eks-nonprod-sites/vb-eks/internal-ingress-athena.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vb-eks-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vb-eks.eks-dev.athena-nonprod.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-internal
            port:
              number: 80
  - host: vb-eks-routing.eks-dev.athena-nonprod.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: routingservice
            port:
              number: 8081
